# agentic-news-lab

./: README.md
backend/news_crew/: clean_articles.json  debug_raw.txt  knowledge_store.json  pyproject.toml  report.md  requirements.txt  sentiment_articles.json  summarized_articles.json
backend/news_crew/src/news_crew/: crew.py  inspectChromaDB.py  main.py  pipeline.py  retrieveChromaData.py
backend/news_crew/src/news_crew/config/: agents.yaml  tasks.yaml
backend/news_crew/src/news_crew/crewai_storage/: latest_kickoff_task_outputs.db  long_term_memory_storage.db
backend/news_crew/src/news_crew/crewai_storage/entities/News_Fetcher_News_Cleaner_News_Summarizer_Sentiment_Classifier_Knowledge_Agent/: chroma.sqlite3
backend/news_crew/src/news_crew/crewai_storage/short_term/News_Fetcher_News_Cleaner_News_Summarizer_Sentiment_Classifier_Knowledge_Agent/: chroma.sqlite3
backend/news_crew/src/news_crew/tools/: gnews_top_headlines_tool.py  local_vader_tool.py  ollama_embeddings.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: NewsCard.jsx  SearchBar.jsx  SentimentChart.jsx
frontend/src/hooks/: useEventStream.js
frontend/src/services/: newsService.js
news_crew/: README.md
news_crew/src/news_crew/: main.py
