[project]
name = "news_crew"
version = "0.1.0"
description = "news-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=0.5.23",
    "crewai[tools]>=0.159.0,<1.0.0",
    "google-generativeai>=0.8.5",
    "hyperbrowser>=0.55.0",
    "nltk>=3.9.1",
    "playwright>=1.54.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "sentence-transformers>=5.1.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
news_crew = "news_crew.main:run"
run_crew = "news_crew.main:run"
train = "news_crew.main:train"
replay = "news_crew.main:replay"
test = "news_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
